--- a/src/posts.html
+++ b/src/posts.html
@@ -2,6 +2,6 @@
 layout: layouts/base.html
 permalink: /posts/ 
 ---
-{% set postslist = collections.posts %}
+{% set postlist = collections.posts %}
 {% include "postlist.html" %}
 <a href="/">Home</a>
