--- a/src/posts.html
+++ b/src/posts.html
@@ -2,5 +2,6 @@
 layout: layouts/base.html
 ---
 {% set postlist = collections.posts %}
+<p>{{collections.posts}}</p>
 {% include "postlist.html" %}
 <a href="/">Home</a>
