--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,5 @@ layout: layouts/base.html
 title: Home
 permalink: /
 ---
-Hello! Welcome to the Eleventy + Netlify from scratch homepage.
+Home Page
 <a href="/posts">Posts</a>
